2005-06-20 20:11 Gregory John Casamento <greg_casamento@yahoo.com>

	* GNUmakefile.preamble: Remove dependency on GL.
	* GormCore/GormOpenGLView.h: Make a subclass of NSView.
	* GormCore/GormOpenGLView.m: Comment out uneeded code.

2005-06-20 19:32 Gregory John Casamento <greg_casamento@yahoo.com>

	* GNUmakefile.preamble: Add -lGL to ADDITIONAL_LIBS
	* GormCore/GNUmakefile: Added new opengl view.
	* GormCore/GormCustomView.m: Added include for GormOpenGLView and 
	modified _bestPossibleSuperClass to return the GormOpenGLView.
	* GormCore/GormOpenGLView.[hm]: Displays a rotating polygon to
	illustrate that this is a OpenGL view to the user when in test mode.
	* GormCore/GormViewWithSubviewsEditor.m: Corrected includes.
	* Gorm.m: Corrected a memory leak in testInterface and endTesting.

2005-06-17 17:33 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/0Menus/GormNSMenu.m: Code cleanup.

2005-06-17 07:59 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/0Menus/GormMenuEditor.m
	* Palettes/0Menus/main.m
	* Palettes/1Windows/main.m
	* Palettes/3Containers/inspectors.m: Code cleanup.

2005-06-17 00:47 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassManager.m
	* GormCore/GormDocument.m
	* GormCore/GormInspectorsManager.m
	* GormCore/GormObjectEditor.m
	* GormCore/GormObjectInspector.m
	* GormCore/GormPalettesManager.m
	* GormCore/GormResourceEditor.m
	* GormCore/GormWindowEditor.m: Code cleanup.

2005-06-17 00:24 Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: Code cleanup.

2005-06-16 23:49 Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: Override "stop:" to call endTesting: if a test
	session is running, instead of killing the app.

2005-06-16 19:49 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormLib/IBInspector.m: Added "revert" call in setObject:

2005-06-14 20:39 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormDocument.m: Fix in [GormDocument translate] to