@@ -2021,7 +2021,7 @@ static NSImage  *fileImage = nil;
 	     asClassName: subClassName];
 	}
 
-      [GSClassSwapper setIsInInterfaceBuilder: YES]; // turn off custom classes.
+      [NSObject setIsInInterfaceBuilder: YES]; // turn off custom classes.
       c = [u decodeObject];
       if (c == nil || [c isKindOfClass: [GSNibContainer class]] == NO)
 	{
@@ -2030,7 +2030,7 @@ static NSImage  *fileImage = nil;
 			  _(@"OK"), nil, nil);
 	  return nil;
 	}
-      [GSClassSwapper setIsInInterfaceBuilder: NO]; // turn on custom classes.
+      [NSObject setIsInInterfaceBuilder: NO]; // turn on custom classes.
       
       // retrieve the custom class data...
       cc = [[c nameTable] objectForKey: GSCustomClassMap];
