@@ -9,6 +9,6 @@ GNUSTEP_CORE_VERSION=0.9.6
 
 # The version number of this release.
 MAJOR_VERSION=0
-MINOR_VERSION=9
-SUBMINOR_VERSION=10
+MINOR_VERSION=10
+SUBMINOR_VERSION=1
 VERSION=${MAJOR_VERSION}.${MINOR_VERSION}.${SUBMINOR_VERSION}
